--- a/views/pig_latinized.erb
+++ b/views/pig_latinized.erb
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1>Pig Latinized Version:</h1>
-    <p><%= @pig_input.result %>
+    <p><%= @pig_input.result %></p>
   </body>
 </html>
