--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -7,7 +7,7 @@
   <body>
     <h1>Pig Latinizer</h1>
 
-    <form method="post" action="/piglatinized">
+    <form method="post" action="/piglatinize">
       <input type="text" name="user_input">
       <input type="submit" id="submit">
     </form>
