--- a/views/pig_latinize.erb
+++ b/views/pig_latinize.erb
@@ -5,7 +5,7 @@
   <body>
 
     <h1>Pig Latinized Version:</h1>
-    <p><%= @pig_latin.result %></p>
+    <p><%= @pig_latin.piglatinize %></p>
 
   </body>
 </html>
