automatically backed up by learn

--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Pig Latinizer!</h1>
-
+    <h2>Enter your phrase:</h2>
     <form method="post" action="/piglatinize">
       <input type="text" name="user_input">
       <input type="submit" id="submit">
